# test-action

./: .gitignore  CMakeLists.txt  README.md
.cmake/: BuildConfig.h.in  GetVersionFromGit.cmake  InstallerScript.iss.in
.github/workflows/: build-linux.yml  build-windows.yml  build-windows.yml.bak
BleHelper/: CMakeLists.txt
BleHelper/qml/: main.qml
BleHelper/qml/components/: RenameAttributePopup.qml
BleHelper/qml/controls/: MyFluColorPicker.qml  MyFluComboBox.qml  MyFluExpander.qml  MyFluIcon.qml  MyFluIconButton.qml  MyFluNestedPageView.qml  MyFluPivot.qml  MyFluPopup.qml  MyFluProgressBar.qml  MyFluTextButton.qml
BleHelper/qml/models/: GlobalModel.qml
BleHelper/qml/pages/: ClientPage.qml  ConnectionPage.qml  DetailsPage.qml  ManageFavoritesPage.qml  ManageUuidDictionaryPage.qml  ScannerPage.qml  SettingsPage.qml
BleHelper/qml/windows/: CrashWindow.qml  MainWindow.qml  NewWindow.qml
BleHelper/resources/translations/: en_US.ts  languages.json  zh_CN.ts
BleHelper/src/: main.cpp
BleHelper/src/ble/: ClientManager.cpp  ClientManager.h  DescriptorInfo.h
BleHelper/src/common/: ApplicationInfo.cpp  ApplicationInfo.h  BuildConfig.h
